--- a/crm1/Accounts/templates/Accounts/products.html
+++ b/crm1/Accounts/templates/Accounts/products.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Products</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        
-        <h1>Products</h1>
-        
-    </body>
-</html>
+{% extends "Accounts/main.html" %}
+
+{% block content%}
+<h1>Products</h1>
+
+{%endblock%}
