--- a/crm1/Accounts/templates/Accounts/dashboard.html
+++ b/crm1/Accounts/templates/Accounts/dashboard.html
@@ -1,6 +1,64 @@
 {% extends "Accounts/main.html" %}
 
 {% block content%}
-<h1>Dashboard</h1>
+
+{% include "Accounts/status.html" %}
+
+<div class="row">
+    <div class ="col-md-5">
+    <h5>CUSTOMERS:</h5>
+    <hr>
+    <div class="card card-body">
+      <a href="#" class="btn btn-primary btn-sm btn-block ">Create Customer</a>
+      <table class="table table-sm">
+        <tr>
+          <th></th>
+          <th>Customers</th>
+          <th>Order</th>
+        </tr>
+  
+        {% comment %} {% for customer in customers%}
+        <tr>
+          <td><a class="btn btn-sm btn-dark" href="{% url 'customer' customer.id %}">View</a></td>
+          <td>{{customer.name}}</td>
+          <td>{{customer.phone}}</td>
+        </tr>
+        {% endfor %} {% endcomment %}
+      </table>
+        <hr>
+    </div>
+      </div>
+  
+    <div class="col-md-7">
+      <h5>Last 5 ORDERS </h5>
+       <hr>
+      <div class="card card-body">
+      {% comment %} <a href="{% url 'createOrder' %}" class="btn btn-primary btn-sm btn-block ">Create Order</a> {% endcomment %}
+      <a href="" class="btn btn-primary btn-sm btn-block ">Create Order</a>
+      <table class="table table-sm">
+        <tr>
+          <th>Product</th>
+          <th>Order Date</th>
+          <th>Status</th>
+          <th>Update</th>
+          <th>Remove</th>
+        </tr>
+        {% comment %} {% for order in orders%}
+        <tr>
+          <td>{{order.product }}</td>
+          <td>{{order.date_created}}</td>
+          <td>{{order.status}}</td>
+          <td><a class="btn btn-sm btn-success" href="{% url 'updateOrder' order.id %}">Update</a></td>
+          <td><a class="btn btn-sm btn-danger" href="{% url 'deleteOrder' order.id %}">Remove</a></td>
+        </tr>
+        {% endfor %} {% endcomment %}
+  
+      </table>
+        <hr>
+  
+    </div>
+  
+  </div>
+  </div>
 
 {%endblock%}
