--- a/crm1/Accounts/templates/Accounts/main.html
+++ b/crm1/Accounts/templates/Accounts/main.html
@@ -8,6 +8,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         
+        {% comment %} //adding css for Accounts/status.html using id {% endcomment %}
+        <style>
+            body{
+            background-color: #ebeff5;
+            }
+        
+            #total-order{
+            background-color: orange;
+            }
+        
+            #order-deliverd{
+            background-color:green;
+            }
+        
+            #order-pending{
+            background-color: red;
+            }
+            </style>
     </head>
     <body>
         
