--- a/crm1/Accounts/templates/Accounts/navbar.html
+++ b/crm1/Accounts/templates/Accounts/navbar.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
+            <a class="nav-link" href="">Products</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">customer</a>
