--- a/crm1/Accounts/templates/Accounts/dashboard.html
+++ b/crm1/Accounts/templates/Accounts/dashboard.html
@@ -17,14 +17,14 @@
           <th>Order</th>
         </tr>
   
-        {% comment %} {% for customer in customers%}
+         {% for customer in customers%}
         <tr>
-          <td><a class="btn btn-sm btn-dark" href="{% url 'customer' customer.id %}">View</a></td>
+          {% comment %} <td><a class="btn btn-sm btn-dark" href="{% url 'customer' customer.id %}">View</a></td> {% endcomment %}
           <td>{{customer.name}}</td>
           <td>{{customer.phone}}</td>
         </tr>
-        {% endfor %} {% endcomment %}
-      </table>
+        {% endfor %} 
+     </table>
         <hr>
     </div>
       </div>
@@ -43,15 +43,15 @@
           <th>Update</th>
           <th>Remove</th>
         </tr>
-        {% comment %} {% for order in orders%}
+        {% for order in orders%}
         <tr>
           <td>{{order.product }}</td>
           <td>{{order.date_created}}</td>
           <td>{{order.status}}</td>
-          <td><a class="btn btn-sm btn-success" href="{% url 'updateOrder' order.id %}">Update</a></td>
-          <td><a class="btn btn-sm btn-danger" href="{% url 'deleteOrder' order.id %}">Remove</a></td>
+          {% comment %} <td><a class="btn btn-sm btn-success" href="{% url 'updateOrder' order.id %}">Update</a></td>
+          <td><a class="btn btn-sm btn-danger" href="{% url 'deleteOrder' order.id %}">Remove</a></td> {% endcomment %}
         </tr>
-        {% endfor %} {% endcomment %}
+        {% endfor %} 
   
       </table>
         <hr>
