--- a/crm1/Accounts/templates/Accounts/products.html
+++ b/crm1/Accounts/templates/Accounts/products.html
@@ -12,13 +12,14 @@
                     <th>Category</th>
                     <th>Price</th>
                 </tr>
-                {% comment %} {% for i in products %}
+                {% for i in product %}
+        
                 <tr>
                     <td>{{i.name}}</td>
                     <td>{{i.category}}</td>
                     <td>{{i.price}}</td>
                 </tr>
-                {% endfor %} {% endcomment %}
+                {% endfor %} 
             </table>
          </div>
     </div>
