--- a/crm1/Accounts/templates/Accounts/status.html
+++ b/crm1/Accounts/templates/Accounts/status.html
@@ -8,7 +8,7 @@
               <h5 class="card-body">Total Orders</h5>
             </div>
             <div class="card-body">
-              {% comment %} <h3 class="card-title"> {{total_orders}}</h3> {% endcomment %} Total orders
+            <h3 class="card-title"> {{total_orders}}</h3>  
             </div>
           </div>
         </div>
@@ -21,7 +21,7 @@
               <h5 class="card-body">Order Deliverd </h5>
             </div>
             <div class="card-body">
-              {% comment %} <h3 class="card-title">{{delivered}} </h3> {% endcomment %}deliverd
+              <h3 class="card-title">{{delivered}} </h3> 
             </div>
           </div>
         </div>
@@ -34,7 +34,7 @@
               <h5 class="card-body">Pending Orders </h5>
             </div>
             <div class="card-body">
-              {% comment %} <h3 class="card-title">{{pending}} </h3> {% endcomment %}Pending
+              <h3 class="card-title">{{pending}} </h3> 
             </div>
           </div>
         </div>
