curd opetation done

--- a/crm1/Accounts/templates/Accounts/dashboard.html
+++ b/crm1/Accounts/templates/Accounts/dashboard.html
@@ -48,8 +48,8 @@
           <td>{{order.product }}</td>
           <td>{{order.date_created}}</td>
           <td>{{order.status}}</td>
-          <td><a class="btn btn-sm btn-success" >Update</a></td>
-          <td><a class="btn btn-sm btn-danger" >Remove</a></td>
+          <td><a class="btn btn-sm btn-success" href="{%url 'update_order' order.id%}">Update</a></td>
+          <td><a class="btn btn-sm btn-danger"href="{%url 'delete_order' order.id%}" >Remove</a></td>
         </tr>
         {% endfor %} 
   
