--- a/crm1/Accounts/templates/Accounts/customer.html
+++ b/crm1/Accounts/templates/Accounts/customer.html
@@ -65,9 +65,9 @@
                         <td>{{order.product.category }}</td>
                         <td>{{order.product.date_created}}</td>
                         <td>{{order.status}}</td>
-                        <td><a class="btn btn-sm btn-success" href="#">Update</a></td>
-                        <td><a  class="btn btn-sm btn-danger" href="#">Remove</a></td>
-                    </tr>
+                        <td><a class="btn btn-sm btn-success" href="{%url 'update_order' order.id%}">Update</a></td>
+                        <td><a class="btn btn-sm btn-danger"href="{%url 'delete_order' order.id%}" >Remove</a></td>
+ </tr>
                     {% endfor %}
                 </table>
 
