--- a/crm1/Accounts/templates/Accounts/dashboard.html
+++ b/crm1/Accounts/templates/Accounts/dashboard.html
@@ -34,7 +34,7 @@
        <hr>
       <div class="card card-body">
       {% comment %} <a href="{% url 'createOrder' %}" class="btn btn-primary btn-sm btn-block ">Create Order</a> {% endcomment %}
-      <a href="" class="btn btn-primary btn-sm btn-block ">Create Order</a>
+      {% comment %} <a href="" class="btn btn-primary btn-sm btn-block ">Create Order</a> {% endcomment %}
       <table class="table table-sm">
         <tr>
           <th>Product</th>
