--- a/crm1/Accounts/templates/Accounts/order_form.html
+++ b/crm1/Accounts/templates/Accounts/order_form.html
@@ -5,7 +5,10 @@
 
 <form action="" method="post">
     {% csrf_token%}
+    {%for form in formset%}
+    {{formset.management_form}}
     {{form}}
+    {% endfor %}
     <input type="submit" name="submit">
 
 </form>
