--- a/crm1/Accounts/templates/Accounts/customer.html
+++ b/crm1/Accounts/templates/Accounts/customer.html
@@ -39,6 +39,7 @@
     <div class="col">
         <div class="card card-body">
           <form method="get">
+            {{MyFilter.form}}
               <button class="btn btn-primary" type="submit">Search</button>
           </form>
            </div>
@@ -53,7 +54,7 @@
                 <table class="table table-sm">
                   <tr>
                         <th>Product</th>
-                        <th>Category</th>
+                        <th>note</th>
                         <th>Date Orderd</th>
                         <th>Status</th>
                         <th>Update</th>
@@ -62,7 +63,7 @@
                     {% for order in orders%}
                     <tr>
                         <td>{{order.product}}</td>
-                        <td>{{order.product.category }}</td>
+                        <td>{{order.note }}</td>
                         <td>{{order.product.date_created}}</td>
                         <td>{{order.status}}</td>
                         <td><a class="btn btn-sm btn-success" href="{%url 'update_order' order.id%}">Update</a></td>
