--- a/crm1/Accounts/templates/Accounts/navbar.html
+++ b/crm1/Accounts/templates/Accounts/navbar.html
@@ -1,3 +1,11 @@
+{%load static%}
+<style>
+  .hello-msg{
+    font-size : 10px;
+    color: white;
+    margin-right:20px;
+  }
+</style>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -38,4 +46,10 @@
         </form>
       </div>
     </div>
+    <span id ="hello-msg">
+      Hello,{{request.user}}
+    </span>
+    <span>
+      <a href= "{% url 'logout' %}" >Logout</a>
+    </span>
   </nav>
