Profile image save succefully

--- a/crm1/Accounts/templates/Accounts/account.html
+++ b/crm1/Accounts/templates/Accounts/account.html
@@ -13,7 +13,7 @@
             <h3 style="text-align:center">Accout Setting</h3>
 
             <hr>
-            <img class="profile-pic" src="{{ request.user.customer.profile_pic.url }}" alt="Profile Picture" onerror="this.src='{% static 'images/default.jpg' %}';">
+            <img class="profile-pic" src="{{ request.user.customer.profile_pic.url }}" alt="Profile Picture" onerror="this.src='{% static 'images/default.png' %}';">
         </div>
     </div>
 
